maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:10: error: not found: value x0
	for (x <- x0-1 to x0+1 by 2)
                  ^